[project]
requires-python = ">=3.10"
dependencies = [
]
name = "loading"
version = "0.1.0"
description = "Matrix data analysis tool"
authors = ["Thomas CHEMIN tchemin@student.42lyon.fr"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.6"
pandas = "^2.3.3"
matplotlib = "^3.10.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
